# cs764-sorter

./: .gitignore  ArrayProvider.cpp  ArrayProvider.h  Assert.cpp  CMakeLists.txt  Consumer.cpp  Consumer.h  DropFirst.cpp  DropFirst.h  Filter.cpp  IODevice.cpp  IODevice.h  InOrderGenerator.cpp  InOrderGenerator.h  Iterator.cpp  Iterator.h  Makefile  MemoryProvider.cpp  MemoryProvider.h  Provider.cpp  Provider.h  README.md  Record.cpp  Record.h  Run.cpp  Run.h  Sim.cpp  Sim.h  Sort.cpp  SortNotes.txt  Sorter.cpp  Sorter.h  SorterConfig.cpp  SorterConfig.h  StagingConfig.cpp  StagingConfig.h  Test.cpp  TournamentPQ.cpp  TournamentPQ.h  Witness.cpp  (+7 more)
Config/: SorterConfig.cpp  SorterConfig.h  StagingConfig.cpp  StagingConfig.h
DuplicateRemoval/: RemoveDuplicates.cpp  RemoveDuplicates.h
ExampleFiles/: input_table  output_table  trace  trace0.txt
Files/: ssdStaging.tmp  staging.tmp  storage.tmp
NotDone/: IODevice.cpp  TournamentPQ.cpp  TournamentPQ.h
OutlinedFiles/: Iterator.cpp  Iterator.h  Scan.h  defs.cpp
Providers/: ArrayProvider.cpp  ArrayProvider.h  Dedooper.cpp  Dedooper.h  DropFirst.cpp  DropFirst.h  EmptyProvider.cpp  EmptyProvider.h  InOrderGenerator.cpp  InOrderGenerator.h  MemoryProvider.cpp  MemoryProvider.h  NoopSorter.cpp  NoopSorter.h  Printer.cpp  Printer.h  Provider.cpp  Provider.h  RandomGenerator.h  RecordProvider.cpp  RecordProvider.h  SingleProvider.cpp  SingleProvider.h  StagedProvider.cpp  StagedProvider.h  StorageProvider.cpp  StorageProvider.h
Records/: CreateRecords.cpp  CreateRecords.h  GenerateRecords.h  Record.cpp  Record.h  rng.cpp  rng.h
Sort/: Sort.h  Sorter.cpp  Sorter.h
Testing/: ArrayProvider.cpp  ArrayProvider.h  CrcRandomGenerator.cpp  CrcRandomGenerator.h  DeviceProviderTest.cpp  DropFirst.cpp  DropFirst.h  EmptyProviderTest.cpp  InOrderGenerator.cpp  InOrderGenerator.h  LotsOfHddRuns.cpp  LotsOfHddRuns.h  NoopSorter.h  RandomGeneratorTest.cpp  SpillOneBlockToSsd.cpp  SpillOneBlockToSsd.h  SpillToHdd.cpp  SpillToHdd.h  StorageProviderTest.cpp  TestGenerateRecords.cpp  TournamentPqTest.cpp  TournamentPqTest.h
Testing/Providers/: StagedProviderTest.cpp  StagedProviderTest.h  StorageProviderTest.h
Testing/SorterHelpers/: TreeSorter.cpp  TreeSorter.h
Testing/Sorting/: Key.cpp  Key.h  NoopSorter.h  SorterTest.cpp  SorterTest.h  TreeSorter.cpp  TreeSorter.h  WitnessTest.cpp  WitnessTest.h
Testing/SortingHelpers/: CrcRandomGenerator.cpp  CrcRandomGenerator.h  Key.cpp  Key.h  NoopSorter.cpp  NoopSorter.h  TreeSorter.cpp  TreeSorter.h
Testing/TestProviders/: ArrayProvider.cpp  ArrayProvider.h  DropFirst.cpp  DropFirst.h  Generators.cpp  Generators.h  InOrderGenerator.cpp  InOrderGenerator.h  Printer.cpp  Printer.h  RandomGenerator.cpp  RandomGenerator.h  StagedProviderTest.cpp  StorageProviderTest.cpp
Testing/Tests/: ConsumerTest.cpp  ConsumerTest.h  DedooperTest.cpp  IoDeviceTest.cpp  IoDeviceTest.h  LotsOfHddRuns.cpp  LotsOfHddRuns.h  Practice.cpp  Practice.h  SorterTest.cpp  SorterTest.h  SpillOneBlockToSsd.cpp  SpillOneBlockToSsd.h  SpillToHdd.cpp  SpillToHdd.h  StagedProviderTest.cpp  StagedProviderTest.h  StorageProviderTest.cpp  StorageProviderTest.h  TournamentPqTest.cpp  TournamentPqTest.h  WitnessTest.cpp  WitnessTest.h
Testing/Tests/Config/: SorterConfigTest.cpp  SorterConfigTest.h  StagingConfigTest.cpp  StagingConfigTest.h
Testing/Tests/DuplicateRemoval/: TestDuplicateRemoval.cpp  TestDuplicateRemoval.h  input1.txt  input2.txt  input3.txt  output1.txt  output2.txt  output3.txt
Testing/Tests/Helpers/: CrcRandomGeneratorTest.cpp  CrcRandomGeneratorTest.h  KeyTest.cpp  KeyTest.h
Testing/Tests/IODevice/: IoDeviceTest.cpp  IoDeviceTest.h  test.txt
Testing/Tests/Providers/: ArrayProviderTest.cpp  ArrayProviderTest.h  DedooperTest.cpp  DedooperTest.h  DeviceProviderTest.cpp  DropFirstTest.cpp  DropFirstTest.h  EmptyProviderTest.cpp  EmptyProviderTest.h  InOrderGeneratorTest.cpp  InOrderGeneratorTest.h  PrinterTest.cpp  PrinterTest.h  RandomGeneratorTest.cpp  RandomGeneratorTest.h  RecordProviderTest.cpp  RecordProviderTest.h  SingleProviderTest.cpp  SingleProviderTest.h  StagedProviderTest.cpp  StagedProviderTest.h  StorageProviderTest.cpp  StorageProviderTest.h
Testing/Tests/Record/: RecordTest.cpp  RecordTest.h
Testing/Tests/Sorters/: SorterTest.cpp  SorterTest.h  TreeSorterTest.cpp  TreeSorterTest.h
Testing/Tests/Spilling/: SpillOneBlockToSsd.cpp  SpillOneBlockToSsd.h  SpillToHdd.cpp  SpillToHdd.h
java/: pom.xml
java/src/sorter/: ArrayProvider.java  Consumer.java  CrcRandomGenerator.java  DropFirst.java  EmptyProvider.java  ExpectedCrcWitness.java  FileConsumer.java  FileProvider.java  FileSorter.java  FinalMerge.java  InOrderGenerator.java  IoDevice.java  MemoryProvider.java  NoopSorter.java  Printer.java  Provider.java  RandomGenerator.java  Record.java  SingleProvider.java  Sorter.java  SorterConfig.java  StagedProvider.java  StagedProviderTest.java  StagingConfig.java  StagingProvider.java  StorageProvider.java  StorageProviderTest.java  TournamentPQ.java  (+5 more)
results/: ts1000.12  ts1000.120  ts1000.125  ts1000.1gb.dups  ts1000.1gb.nodups  ts1000.50  ts20.12  ts20.120  ts20.125  ts20.50  ts2000.12  ts2000.120  ts2000.125  ts2000.50
src/: Consumer.cpp  Consumer.h  Convert.h  GenerateRecords.cpp  Generator.cpp  Generator.h  GeneratorTool.cpp  IODevice.cpp  IODevice.h  Provider.cpp  Provider.h  Record.cpp  Record.h  Run.h  SingleProvider.h  Sorter.cpp  Sorter.h  SorterTool.cpp  StagedProvider.cpp  StagedProvider.h  StorageProvider.cpp  StorageProvider.h  TournamentPQ.cpp  TournamentPQ.h  Witness.h  grabbag.cpp  main.cpp
src/tools/: CopyTool.cpp  Generate.cpp  Generate.h  GenerateMain.cpp  Sort.cpp  SortMain.cpp  SortMain.h  Verify.cpp  VerifyMain.cpp  VerifyMain.h  generate.cpp  sort.cpp  verify.cpp
test/: ArrayProviderTest.cpp  IoDeviceTest.cpp  ProviderTest.cpp  RecordTest.cpp  SorterTest.cpp  StagedProviderTest.cpp  TournamentPqTest.cpp  WitnessTest.cpp
test/helpers/: ArrayProvider.h  Consumer.cpp  Consumer.h  Generator.cpp  Generator.h  Generators.h  Printer.cpp  Printer.h  TreeSorter.h
(+10 files in other folders)
